--- a/鼠标放置下拉菜单.html
+++ b/鼠标放置下拉菜单.html
@@ -17,14 +17,15 @@
 				height: 80px;
 				margin: 0 auto;
 				border: none;
+				padding-top: 5px;
 			}
 			.box{
 				width: 110px;
 				height: 40px;
 				font-size: 18px;
 				border-right: solid 1px #cccccc;
-				padding-bottom: 8px;
-				line-height: 45px;
+				/* padding-bottom: 8px; */
+				line-height: 40px;
 				text-align: center;
 				/* 相对定位元素 */
 				position: relative;
@@ -35,7 +36,7 @@
 				width: 110px;
 				height: 40px;
 				font-size: 18px;
-				line-height: 45px;
+				line-height: 40px;
 				text-align: center;
 				position: relative;
 				float: left;
@@ -69,6 +70,7 @@
 			}
 			/* 最后一个盒子的列表显示 */
 			.box10:hover .liebiao{
+				margin: ;
 				display: block;
 			}
 			/* 鼠标放到列表的颜色 */
