--- a/js笔记.html
+++ b/js笔记.html
@@ -453,8 +453,97 @@
 			// console.log(zxy.name);
 			// zxy.sing('李兰香')
 			
-					
+					// 构造函数
+				// 基本语法;
+				// function 构造函数名(形参){
+				// 	this.属性 = 值;
+				// 	this.方法 = function(){
+				// 	}
+				// }
+				// new 构造函数名();
+			// 创建构造函数定义形参
+			// function Wz(name,type,blood,attack){
+			// 	// 将传过来的实参再次赋值给属性
+			// 	this.name = name;
+			// 	this.type = type;
+			// 	this.blood = blood;
+			// 	this.attack = attack;
+			// }
+			// // 将实参传递给形参
+			// var lp = new Wz('廉颇','力量型','500血量','攻击:近战');
+			// // 打印输出
+			// console.log(lp.name);
+			// console.log(lp.type);
+			// console.log(lp.blood);
+			// console.log(lp.attack);
+			// var hy = new Wz('后裔','射手','100血量','攻击:远程');
+			// console.log(hy.name);
+			// console.log(hy.type);
+			// console.log(hy.blood);
+			// console.log(hy.attack);
 			
+				// 遍历对象
+			// var obj = {
+			// 	name: 'pink',
+			// 	age: 18,
+			// 	sex: '男'
+			// }
+			// for(var k in obj){
+			// 	console.log(k);		//k 变量输出的是属性名
+			// 	console.log(obj[k]);	//obj[k]得到的是属性值
+			// }   
+			
+					// Math数学对象
+			// console.log(Math.max(1,2,3,555));
+					// 得到两个数之间的最大整数,包括两个数
+			// function a (min,max){
+			// 	return Math.floor(Math.random() * (max - min + 1)) + min;
+			// }
+			// console.log(a(1,10));
+			
+					//Dete参数，返回系统当前时间
+			// var date = new Date();
+			// console.log(date);
+			
+					// 格式化日期年月日
+			// var date = new Date();
+			// var year = date.getFullYear();		//年份
+			// var month = date.getMonth() + 1;		//月份要 + 1;
+			// var dates = date.getDate();			//日
+			// //无法直接输出汉字'星期几'，所以用数组方式输出。
+			// var arr = ['星期日','星期一','星期二','星期三','星期四','星期五','星期六'];
+			// var day = date.getDate();		//星期
+			// var h = date.getHours();
+			// h = h < 10 ? '0' + h : h;
+			// var m = date.getMinutes();
+			// m = m < 10 ? '0' + m : m;
+			// var s = date.getSeconds();
+			// s = s < 10 ? '0' + s : s;
+			// console.log('今天是: ' + year +'年' + month + '月' + dates + '日' + arr[day] + '\0' + h + ':' + m + ':' + s);
+		
+					// 获得Date总的毫秒数(时间戳) 不是当前时间的毫秒数 二十距离1970年1月1日过了多少毫秒
+				// 1:常用写法
+			// var date = +new Date();
+			// console.log(date);
+			// 	// 2:H5 新增写法,(不考虑兼容可用)
+			// console.log(Date.now());
+			
+					// 倒计时案例
+			function countDown(time){
+				var nowTime = +new Date();	//返回当前时间总的毫秒数
+				var inputTime = +new Date(time);
+				var times = (inputTime - nowTime) / 1000	//剩余的总毫秒数
+				var d = parseInt(times / 60 / 60 / 24);
+				d = d < 10 ? '0' + d : d;
+				var h = parseInt(times / 60 / 60 % 24);
+				h = h < 10 ? '0' + h : h;
+				var m = parseInt(times / 60 %60);
+				m = m < 10 ? '0' + m : m;
+				var s = parseInt(times %60);
+				s = s < 10 ? '0' + s : s;
+				return d + '天' + h + '时' + m + '分' + s + '秒'
+			}
+			console.log(countDown('2021-6-6 21:50:00'));
 		</script>
 	</head>
 	<body>
