--- a/js笔记.html
+++ b/js笔记.html
@@ -544,6 +544,34 @@
 			// 	return d + '天' + h + '时' + m + '分' + s + '秒'		//返回时间
 			// }
 			// console.log(countDown('2021-6-6 21:50:00'));	//实参传回到534的形参
+		
+					// 利用new Array创建数组
+			// var arr1 = new Array();		//创建了一个空数组
+			// var arr1 = new Array(2);		//创建了一个长度为2的数组
+			// var arr1 = new Array(2,3);		//等价于[2,3]有两个元素
+			// console.log(arr1);
+			
+					//筛选数组[1500,1600,2000,2100,1800]超过2000的
+			// var arr = [1500,1600,2000,2100,1800];
+			// var newArr = [];			//创建一个用来存储新数组的空数组
+			// for(var i = 0; i < arr.length; i++){	//外层循环，遍历arr数组
+			// 	if(arr[i] < 2000){		//判断小于2000的数组
+			// 		newArr.push(arr[i]);		//将小于2000的元组推入新数组
+			// 	}
+			// }
+			// console.log(newArr);
+			
+					// 数组排序
+				//反转数组
+			// var arr = ['pink','red','blue'];
+			// arr.reverse();
+			// console.log(arr);
+				//冒泡排序
+			// var arr = [13,4,77,1,7]
+			// arr.sort(function (a,b){		//arr.sort()括号中函数固定写法,(a - b)升序排序。(b - a)降序排序
+			// 	return a - b;		//升序排序
+			// });
+			// console.log(arr);
 		</script>
 	</head>
 	<body>
