--- a/js基础笔记.html
+++ b/js基础笔记.html
@@ -512,14 +512,14 @@
 			// var dates = date.getDate();			//日
 			// //无法直接输出汉字'星期几'，所以用数组方式输出。
 			// var arr = ['星期日','星期一','星期二','星期三','星期四','星期五','星期六'];
-			// var day = date.getDate();		//星期
+			// var day = date.getDay();		//星期
 			// var h = date.getHours();
 			// h = h < 10 ? '0' + h : h;
 			// var m = date.getMinutes();
 			// m = m < 10 ? '0' + m : m;
 			// var s = date.getSeconds();
 			// s = s < 10 ? '0' + s : s;
-			// console.log('今天是: ' + year +'年' + month + '月' + dates + '日' + arr[day] + '\0' + h + ':' + m + ':' + s);
+			// console.log('今天是: ' + year +'年' + month + '月' + dates + '日 ' + arr[day] + '\0' + h + ':' + m + ':' + s);
 		
 					// 获得Date总的毫秒数(时间戳) 不是当前时间的毫秒数 二十距离1970年1月1日过了多少毫秒
 				// 1:常用写法
