--- a/大作业/列表页/列表页.html
+++ b/大作业/列表页/列表页.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>要闻 - 中国日报网</title>
 		<link rel="icon" href="img-z\tubiao.ico" type="image/x-icon">
-		<link href="dazuoye.css" type="text/css" rel="stylesheet"/>
+		<link href="列表页.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body>
 		<!-- 头部！！！！！！！！！！ -->
@@ -52,9 +52,9 @@
 		<div class="nrmaxbox">
 			<div class="nrbox">
 				<div class="wbox">
-					<div class="leftfloat"><img src="img-z/6.jpeg" width="199px" height="112px" ></div>
-						<h3>吴钊燮接受澳媒采访散布“台独”言论，国台办回应</h3>
-							<p>世界上只有一个中国，台湾是中国的一部分。这是任何人任何势力都无法改变的铁的事实。<strong class="rightfloat">2021-5-7</strong></p>
+					<a href="..\内容页\内容.html"><div class="leftfloat"><img src="img-z/6.jpeg" width="199px" height="112px" ></div>
+						<h3>古巴驻华大使：百年中共树立领导榜样</h3>
+							<p>古巴驻华大使卡洛斯·米格尔·佩雷拉在媒体见面会上指出，中国共产党的领导是中国特色社会主义最本质的特征，中国特色社会主义坚持以人为本理念。<strong class="rightfloat">2021-5-7</strong></p></a>
 					<hr width="653" size="1px" align="left">
 			
 					<div class="leftfloat"><img src="img-z/7.jpeg" width="199px" height="112px" ></div>
