--- a/小米/小米官网.html
+++ b/小米/小米官网.html
@@ -734,6 +734,157 @@
                 </div>
             </div>
         </div>
+        <div class="peijian">
+            <h2>配件</h2>
+            <span>热门&nbsp;&nbsp;&nbsp;充电器</span>
+        </div>
+        <div class="peijian-maxbox">
+           <div class="peijian-box">
+               <img width="100%" height="100%" src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/8bfc6ce0d4438dbb1623a7d1834413fb.png?thumb=1&w=293&h=375&f=webp&q=90" alt="">
+           </div>
+           <div class="peijian-box">
+               <div><img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/9eb0178e3bfeb7d170edd641fb4be4bc.jpg?thumb=1&w=250&h=250&f=webp&q=90" alt=""></div>
+                <div>高速无线套装</div>
+                <div>快速无线闪充,Qi充电标准</div>
+                <div>149元</div>
+            </div>
+            <div class="peijian-box">
+                <div><img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/1f32af53d1ad60f4980146f6a2b81019.jpg?thumb=1&w=250&h=250&f=webp&q=90" alt=""></div>
+                <div>小米无线充电宝青春版10000mAh</div>
+                <div>能量满满,无线有线都能充</div>
+                <div>129元</div>
+            </div>
+            <div class="peijian-box">
+                <div><img src="https://cdn.cnbj0.fds.api.mi-img.com/b2c-mimall-media/d6484113b03acde1672d50c395c09763.jpg?thumb=1&w=250&h=250" alt=""></div>
+                <div>小米插线板（含3口USB 2A 快充）</div>
+                <div>3个USB充电口，支持快充</div>
+                <div>59元</div>
+            </div>
+            <div class="peijian-box">
+                <div><img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/2eab1621911a13f2662e0e260df7c5ad.jpg?thumb=1&w=250&h=250&f=webp&q=90" alt=""></div>
+                <div>米家魔方转换器</div>
+                <div>方寸之间，能量无限</div>
+                <div>59元</div>
+            </div>
+            <div class="peijian-box">
+                <img width="100%" height="100%" src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/601e51657711e0bafc1e394b7a0db08a.png?thumb=1&w=293&h=375&f=webp&q=90" alt="">
+            </div>
+            <div class="peijian-box">
+                <div><img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/55926d1b495899372e4235a110ab0a4f.jpg?thumb=1&w=250&h=250&f=webp&q=90" alt=""></div>
+                <div>米家插线板 快充版 27W</div>
+                <div>安全的大功率快充插线板</div>
+                <div>69元</div>
+            </div>
+            <div class="peijian-box">
+                <div><img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/b441057910c50e8807c5da90f65ba300.jpg?thumb=1&w=250&h=250&f=webp&q=90" alt=""></div>
+                <div>米家筋膜枪</div>
+                <div>米家筋膜枪</div>
+                <div>499元</div>
+            </div>
+            <div class="peijian-box">
+                <div><img src="https://cdn.cnbj0.fds.api.mi-img.com/b2c-miapp-a1/554198af-55ec-8400-7a04-66a8f3e0dd66.jpg?thumb=1&w=250&h=250" alt=""></div>
+                <div>米家插线板6位基础版（含3口USB）</div>
+                <div>小巧设计，便捷不占地儿</div>
+                <div>79元</div>
+            </div>
+            <div>
+                <div>
+                    <span>小米车载充电器快充版<p>69元</p></span>
+                    <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/01dba858b327eeeadf34ce8a1d794ed4.jpg?thumb=1&w=125&h=125&f=webp&q=90" alt="">
+                </div>
+                <div>
+                    <p>浏览更多</p>
+                    <p>热门</p>
+                </div>
+            </div>
+        </div>
+        <img id="img" src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/88e35cffc82cd98cd53172460067af17.jpg?thumb=1&w=1533&h=150&f=webp&q=90" alt="">
+        <div class="shipin">
+            <span>视频</span>
+            <span>查看全部</span>
+        </div>
+        <div class="shipin-box">
+            <div>
+                <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/e74c4ff741bcdfc5b28a48a43e4edc6d.jpg?thumb=1&w=370&h=225&f=webp&q=90" alt="">
+                <span>2021年春季新品发布会第一场</span>
+            </div>
+            <div>
+                <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/101b19aca4bb489bcef0f503e44ec866.jpg?thumb=1&w=370&h=225&f=webp&q=90" alt="">
+                <span>redmi 10X系列发布会</span>
+            </div>
+            <div>
+                <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/96563e75833ba4563bd469dd28203b09.jpg?thumb=1&w=370&h=225&f=webp&q=90" alt="">
+                <span>小米10 青春版 发布会</span>
+            </div>
+            <div>
+                <img src="https://cdn.cnbj1.fds.api.mi-img.com/mi-mall/2fd26bb99b723337a2f8eaba84f7d5bb.jpg?thumb=1&w=370&h=225&f=webp&q=90" alt="">
+                <span>小米10 8K 手机拍大片</span>
+            </div>
+        </div>
+    </div>
+    <div class="dibudaohanglan">
+        <div class="dibudaohanglan-content">
+            <ul class="yuyuefuwu">
+                <li>预约维修服务</li>
+                <li>|</li>
+                <li>7天无理由退货</li>
+                <li>|</li>
+                <li>15天免费换货</li>
+                <li>|</li>
+                <li>满69包邮</li>
+                <li>|</li>
+                <li>520余家售后网点</li>
+            </ul>
+            <div class="bangzhu">
+                <ul>
+                    <li class="bangzhu-a">帮助中心
+                        <ul>
+                            <li>账户管理</li>
+                            <li>购物指南</li>
+                            <li>订单操作</li>
+                        </ul>
+                    </li>
+                    <li class="bangzhu-a">服务支持
+                        <ul>
+                            <li>售后政策</li>
+                            <li>自助服务</li>
+                            <li>相关下载</li>
+                        </ul>
+                    </li>
+                    <li class="bangzhu-a">线下门店
+                        <ul>
+                            <li>小米之家</li>
+                            <li>服务网点</li>
+                            <li>授权体验店</li>
+                        </ul>
+                    </li>
+                    <li class="bangzhu-a">关于小米
+                        <ul>
+                            <li>了解小米</li>
+                            <li>加入小米</li>
+                            <li>投资者关系</li>
+                            <li>企业社会责任</li>
+                            <li>廉洁举报</li>
+                        </ul>
+                    </li>
+                    <li class="bangzhu-a">关注我们
+                        <ul>
+                            <li>新浪微博</li>
+                            <li>官方微信</li>
+                            <li>联系我们</li>
+                            <li>公益基金会</li>
+                        </ul>
+                    </li>
+                    <li class="bangzhu-a">特色服务
+                        <ul>
+                            <li>F码通道</li>
+                            <li>礼物码</li>
+                            <li>防伪查询</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 
@@ -761,7 +912,7 @@
 
 
     
-    <div class="right">
+    <!-- <div class="right">
         <div class="right-box1">
             <img src="images/手机.png" alt="">
             <p>手机APP</p>
@@ -782,6 +933,6 @@
             <img src="images/购物车.png" alt="">
             <p>购物车</p>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
