--- a/js笔记/java-script/JavaScript APIs 素材/xiaoqiang001-jsapis_material-master/jsapis_material/第五天/04-拖动的模态框.html
+++ b/js笔记/java-script/JavaScript APIs 素材/xiaoqiang001-jsapis_material-master/jsapis_material/第五天/04-拖动的模态框.html
@@ -39,12 +39,12 @@
             height: 280px;
             position: fixed;
             border: #ebebeb solid 1px;
-            left: 50%;
-            top: 50%;
+            /* left: 50%;
+            top: 50%; */
             background: #ffffff;
             box-shadow: 0px 0px 20px #ddd;
             z-index: 9999;
-            transform: translate(-50%, -50%);
+            /* transform: translate(-50%, -50%); */
         }
         
         .login-title {
@@ -76,7 +76,7 @@
             width: 100%;
             height: 100%;
             position: fixed;
-            top: 0px;
+           top: 0px;
             left: 0px;
             background: rgba(0, 0, 0, .3);
         }
