--- a/js笔记/javascript-Bom-笔记/简单动画函数封装.html
+++ b/js笔记/javascript-Bom-笔记/简单动画函数封装.html
@@ -30,6 +30,7 @@
     <button>点击运行span</button>
 
     <script>
+        // 动画一定要添加 定位 不然无法运行
         var div = document.querySelector('div')
         var span = document.querySelector('span')
         var btn = document.querySelector('button')
