--- a/初识vue.html
+++ b/初识vue.html
@@ -19,7 +19,8 @@
                 备注：Vue中有许多指令，且形式都是 v-xxx, 此处我们只是那v-bind举例
      -->
     <div id="div">我叫{{name}}
-        <!-- toUpperCase()  js表达式 意为将url转换为大写 -->
+        <!-- toUpperCase()  js表达式 意为将url转换为大写
+         -->
         <a :href="url.toUpperCase()">点击跳转</a>
         <div>我叫{{school.name}}</div>
     </div>
