--- a/js笔记/js基础笔记.html
+++ b/js笔记/js基础笔记.html
@@ -551,6 +551,12 @@
 			// var arr1 = new Array(2,3);		//等价于[2,3]有两个元素
 			// console.log(arr1);
 			
+					//删除数组
+			// var arr=[11,22,33,44,55]
+			// console.log(arr);
+			// 从数组索引第 1 个开始删除 4 个并且添加一个 00
+			// arr.splice('1','4','00')
+			
 					//筛选数组[1500,1600,2000,2100,1800]超过2000的
 			// var arr = [1500,1600,2000,2100,1800];
 			// var newArr = [];			//创建一个用来存储新数组的空数组
