--- a/js笔记/javascript-Bom-笔记/轮播图自动切换.html
+++ b/js笔记/javascript-Bom-笔记/轮播图自动切换.html
@@ -149,6 +149,8 @@
                 setA()
             },2000)
         }
+        // var first = ul.children[0].cloneNode(true)
+        // ul.appendChild(first)
 
         // 先 add 后 desc 结果陷入死循环 一直在最后一张图片
         // 秒       index       add             desc
