--- a/数据绑定.html
+++ b/数据绑定.html
@@ -22,7 +22,7 @@
         <!-- 单向数据绑定 v-bind: -->
         单向数据绑定<input type="text" name="" id="" v-bind:value="name">
         <br/>
-        <!-- 双向数据绑定 v-modle: -->
+        <!-- 双向数据绑定 v-model: -->
         双向数据绑定<input type="text" name="" id="" v-model:value="name">
     </div>
 
