--- a/事件处理.html/事件的基本使用.html
+++ b/事件处理.html/事件的基本使用.html
@@ -18,7 +18,7 @@
         事件的基本使用：
             1,使用 v-on:xxx 或 @xxx 绑定事件，其中 xxx 是事件名
             2,事件的回调函数需要配置在 methods 对象中，最终会在 vm 中
-            3,methods 中配置的函数,不要用见都函数 否则 this 就不是 vm 了
+            3,methods 中配置的函数,不要用箭头函数 否则 this 就不是 vm 了
             4,methods 中配置的函数,都是被 Vue 所管理的函数 this 的指向是 vm 或组件实例对象
             5,@click='xxx' 和 @click='xxx($svent)' 效果一样，但后者可以传参
      -->
