--- a/数据代理/(!!!!!!)Object.defineProterty.html
+++ b/数据代理/(!!!!!!)Object.defineProterty.html
@@ -15,24 +15,24 @@
         }
 
         Object.defineProperty(person,'age',{
-            /*value:'18',
+            value:'18',
             enumerable:true,    //控制属性是否可以被枚举(遍历),默认值 false
             writable:true,      //控制属性是否可以被修改,默认值false
             configurable:true,  //控制属性是否可以被删除,默认值false
-            */
+            
 
 
             // 题目：将 number 的值复制给 person 方法的 age 并且 age 的值可以随 number 的改变而改变
             // 当有人读取 person 的 age 时 get 函数就会被调用 切返回 age 值  get 必须有 return 返回值
             // 可简写为 get(){}
-            get:function(){
-                return number
-            },
+            // get:function(){
+            //     return number
+            // },
             
-            // 当有人修改 person 的 age 属性时 set 函数就会被调用 且会受到修改的具体值
-            set(value){
-                number = value
-            }
+            // // 当有人修改 person 的 age 属性时 set 函数就会被调用 且会受到修改的具体值
+            // set(value){
+            //     number = value
+            // }
 
         })
 
@@ -40,11 +40,11 @@
 
 
 
-        console.log(person);
+        // console.log(person);
 
-        for(var k in person){
-            console.log(person[k]);
-        }
+        // for(var k in person){
+        //     console.log(person[k]);
+        // }
     </script>
 </body>
 </html>
