--- a/资料（含课件）/资料（含课件）/04_静态页面/4_route_page2/home-message.html
+++ b/资料（含课件）/资料（含课件）/04_静态页面/4_route_page2/home-message.html
@@ -25,7 +25,7 @@
             <div>
               <h2>Home组件内容</h2>
               <div>
-                <ul class="nav nav-tabs">
+                <ul class="nav nav-pills">
                   <li>
                     <a class="list-group-item" href="./home-news.html">News</a>
                   </li>
